libs/modkit-db-macros/tests/ui/err_duplicate_tenant_col.stderr
error: duplicate attribute 'tenant_col'
 --> tests/ui/err_duplicate_tenant_col.rs:7:10
  |
7 | #[secure(tenant_col = "tenant2_id")]
  |          ^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/err_duplicate_tenant_col.rs:8:14
  |
8 | struct Model;
  |              ^ consider adding a `main` function to `$DIR/tests/ui/err_duplicate_tenant_col.rs`
